--- a/MobileApp/MobileApp/MobileApp/Views/SignUpPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/SignUpPage.xaml
@@ -9,26 +9,31 @@
                 <Label FontSize="40" HorizontalOptions="Center" Text="SignUp"/>
 
                 <Label Text="Email" FontSize="Large"/>
-                <Entry x:Name="usernameEntry" Text="{Binding Username}" Placeholder="Email" FontSize="Large"/>
+                <Entry x:Name="usernameEntry" Text="{Binding Email}" Placeholder="Email" FontSize="Large"/>
                 <Label Text="Password" FontSize="Large"/>
                 <Entry x:Name="passwordEntry" Text="{Binding Password}" Placeholder="Password" FontSize="Large" IsPassword="True"/>
                 <Label Text="Confirm Password" FontSize="Large"/>
                 <Entry x:Name="passwordConfirmEntry" Text="{Binding Password}" Placeholder="Confirm password" FontSize="Large" IsPassword="True"/>
 
                 <Label Text="First Name" FontSize="Large"/>
-                <Entry x:Name="firstNameEntry" Text="{Binding Username}" Placeholder="First name" FontSize="Large"/>
+                <Entry x:Name="firstNameEntry" Text="{Binding FirstName}" Placeholder="First name" FontSize="Large"/>
                 <Label Text="Last Name" FontSize="Large"/>
-                <Entry x:Name="lastNameEntry" Text="{Binding Username}" Placeholder="Last Name" FontSize="Large"/>
+                <Entry x:Name="lastNameEntry" Text="{Binding LastName}" Placeholder="Last Name" FontSize="Large"/>
                 <Label Text="Age" FontSize="Large"/>
-                <Entry x:Name="ageEntry" Text="{Binding Username}" Placeholder="Age" FontSize="Large"/>
+                <Entry x:Name="ageEntry" Text="{Binding Age}" Placeholder="Age" FontSize="Large"/>
                 <Label Text="Gender" FontSize="Large"/>
-                <Entry x:Name="genderEntry" Text="{Binding Username}" Placeholder="Gender" FontSize="Large"/>
+                <Picker x:Name="gender" HorizontalOptions="FillAndExpand" SelectedItem="{Binding Gender}">
+                    <Picker.Items>
+                        <x:String>Male</x:String>
+                        <x:String>Female</x:String>
+                    </Picker.Items>
+                </Picker>
                 <Label Text="Address" FontSize="Large"/>
-                <Entry x:Name="addressEntry" Text="{Binding Username}" Placeholder="Address" FontSize="Large"/>
+                <Entry x:Name="addressEntry" Text="{Binding PhoneNumber}" Placeholder="Address" FontSize="Large"/>
                 <Label Text="Phone Number" FontSize="Large"/>
-                <Entry x:Name="phoneNumberEntry" Text="{Binding Username}" Placeholder="Phone Number" FontSize="Large"/>
-
-                <Button Text="Register"/>
+                <Entry x:Name="phoneNumberEntry" Text="{Binding Address}" Placeholder="Phone Number" FontSize="Large"/>
+                
+                <Button Text="Register" Command="{Binding RegisterCmd}"/>
                 <!--<Label x:Name="messageLabel"/>-->
                 <FlexLayout Wrap="Wrap" JustifyContent="SpaceAround">
                     <Button WidthRequest="185" Text="Login"/>
