--- a/Admin Interface/AdminInterface/AdminInterface/Views/Login/Index.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Login/Index.cshtml
@@ -25,10 +25,10 @@
 </environment>
 
 <div class="loginContainer">
-    <form action="#">
+    <form method="POST">
         <h1>Login</h1>
-        <input type="text" id="email" placeholder="Email"><br>
-        <input type="password" id="password" placeholder="Password"><br><br>
+        <input type="text" id="email" placeholder="Email" name="email"><br>
+        <input type="password" id="password" placeholder="Password" name="password"><br><br>
         <input type="submit" value="Login" class="submitBtn">
     </form>
 </div>
