Fixed login view scaling

--- a/Admin Interface/AdminInterface/AdminInterface/wwwroot/css/LoginStyleSheet.css
+++ b/Admin Interface/AdminInterface/AdminInterface/wwwroot/css/LoginStyleSheet.css
@@ -29,6 +29,7 @@
         box-shadow: 0 6px 8px rgba(0,0,0,.3);
         border-radius: 15px;
         backdrop-filter: blur(4px);
+        min-width: 400px;
         /*align-items: center;*/
         /*justify-content: center;*/
     }
