--- a/MobileApp/MobileApp/MobileApp/Views/HomePage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/HomePage.xaml
@@ -66,14 +66,14 @@
     <!--<Shell.TabBarIsVisible Shell.TabBarIsVisible="True"/>-->
 
     <ScrollView>
-        <StackLayout Margin="10">
-            <Label Text="Recomended Products" CharacterSpacing="0.5" FontSize="Large" TextColor="Black" FontAttributes="Bold"/>
+        <StackLayout Margin="0">
+            <Label Margin="10,10" Text="Recomended Products" CharacterSpacing="0.5" FontSize="30" TextColor="Black" FontAttributes="Bold"/>
             <!--Carousel -> itemSource is list of all products change to recomeneded product list-->
             <CarouselView ItemsSource="{x:Static data:RecommendedProducts.RecProducts}"
                           Margin="0,5,0,0"
                           PeekAreaInsets="100"
                           IndicatorView="indicatorview"
-                          HeightRequest="230"
+                          HeightRequest="250"
                           CurrentItem="OnCollectionViewSelectionChanged">
                 <CarouselView.ItemTemplate>
                     <DataTemplate>
@@ -82,9 +82,10 @@
                                    BorderColor="LightGray"
                                    CornerRadius="5"
                                    Margin="4,2"
-                                   HeightRequest="200"
+                                   Padding="0,10"
+                                   HeightRequest="220"
                                    WidthRequest="250">
-                                <StackLayout Margin="0">
+                                <StackLayout Margin="0" Padding="0">
                                     <StackLayout.GestureRecognizers>
                                         <!--<TapGestureRecognizer Command="{Binding selectCarouselItem}" CommandParameter="{Binding Id}" />-->
                                         <TapGestureRecognizer Tapped="CarouselItem_Tapped" />
@@ -92,26 +93,24 @@
                                     <Label Text="{Binding Id}" IsVisible="false" x:Name="ProductID"/>
                                     <Image Source="{Binding ImageUrl}" 
                                            Aspect="AspectFit"
-                                           HeightRequest="100"
-                                           WidthRequest="250"
+                                           HeightRequest="125"
                                            VerticalOptions="Start"
                                            HorizontalOptions="Center" />
+                                    <BoxView Style="{StaticResource SeparatorLineStyle}" Margin="0,0,0,0"/>
                                     <Label Text="{Binding Name}" 
                                            FontAttributes="Bold"
-                                           FontSize="Large"
+                                           FontSize="28"
                                            HorizontalOptions="Center"
                                            VerticalOptions="Center" TextColor="Black"/>
-                                    <Label Text="{Binding Description}"
-                                           HorizontalOptions="Center" TextColor="Black"/>
 
                                     <FlexLayout HorizontalOptions="Center" JustifyContent="Center">
                                         <Label Text="Price: £"
-                                                FontSize="16"
+                                                FontSize="24"
                                                 TextColor="Black"/>
                                         <Label Text="{Binding Price}"
                                                 MaxLines="5"
                                                 LineBreakMode="TailTruncation"
-                                                FontSize="16"
+                                                FontSize="24"
                                                 TextColor="Black"/>
                                     </FlexLayout>
                                 </StackLayout>
@@ -130,15 +129,18 @@
             <!-- separator line -->
             <BoxView Style="{StaticResource SeparatorLineStyle}" Margin="15,25,15,10"/>
 
-            <Label Text="You might like" FontSize="Large" CharacterSpacing="0.5" TextColor="Black" FontAttributes="Bold"/>
+            <Label Text="You might like" FontSize="30" CharacterSpacing="0.5" TextColor="Black" FontAttributes="Bold"/>
             <!--collection of all items in product array-->
-            <CollectionView Margin="1"
+            <CollectionView Margin="5"
                             BackgroundColor="#f7f7f7"
                             ItemsLayout="VerticalList"
                             ItemsSource="{x:Static data:ProductData.Products}"
                             ItemTemplate="{StaticResource ProductTemplate}"
                             SelectionMode="Single"
-                            SelectionChanged="OnCollectionViewSelectionChanged"/>
+                            SelectionChanged="OnCollectionViewSelectionChanged"
+                            ItemsUpdatingScrollMode="KeepScrollOffset"
+                            >
+            </CollectionView>
         </StackLayout>
     </ScrollView>
 </ContentPage>
