--- a/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
@@ -32,34 +32,38 @@
     
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout Margin="20">
-                <Label Text="{Binding Name}"
-                       HorizontalOptions="Start" 
-                       FontSize="Title" FontAttributes="Bold" TextColor="Black" />
+            <StackLayout Margin="10">
 
-                <Image Source="{Binding ImageUrl}"
+                <Frame BorderColor="#D8DAE0" CornerRadius="20" HasShadow="True">
+                    <Image Source="{Binding ImageUrl}"
                        Margin="0,5,0,10"
                    HeightRequest="200" 
                    WidthRequest="500" 
-                   HorizontalOptions="CenterAndExpand" />
+                   HorizontalOptions="CenterAndExpand"/>
+                </Frame>
+                
+                <Label Text="{Binding Name}"
+                       HorizontalOptions="Start" 
+                       FontSize="40" FontAttributes="Bold" TextColor="Black" />
                 <!--flex box to display word price next to price binding-->
                 <FlexLayout>
-                    <Label Text="Price: £" TextColor="Black" FontSize="Large"/>
+                    <Label Text="Price: £" TextColor="Black" FontSize="30"/>
                     <Label Text="{Binding Price}"
-                       Style="{DynamicResource BodyStyle}" FontSize="Large" TextColor="Black"/>
+                       Style="{DynamicResource BodyStyle}" FontSize="30" TextColor="Black"/>
                 </FlexLayout>
-                <Label Text="Description" TextColor="Black" FontSize="Medium"/>
-                <Label Text= "{Binding Description}"
-                       Style="{DynamicResource BodyStyle}" TextColor="Black"/>
                 <Grid RowDefinitions="50" ColumnDefinitions="*, *" Margin="0,10,0,10">
                     <Button Text="Buy Now!" Grid.Column="0" Grid.Row="0" Command="{Binding BuyNowCmd}"/>
                     <Button Text="Add To Basket" Grid.Column="1" Grid.Row="0" Command="{Binding AddToBasketCmd}"/>
                 </Grid>
+                <Label Text="Description" TextColor="Black" FontSize="30"/>
+                <Label Text= "{Binding Description}"
+                       Style="{DynamicResource BodyStyle}" TextColor="Black" FontSize="24"/>
+
 
                 <!-- separator line -->
                 <BoxView Style="{StaticResource SeparatorLineStyle}"/>
 
-                <Label Text="Reviews" TextColor="Black" FontSize="Medium"/>
+                <Label Text="Reviews" TextColor="Black" FontSize="30"/>
                 <ScrollView>
                     <!--Reviews go here-->
                 </ScrollView>
