--- a/MobileApp/MobileApp/MobileApp/App.xaml
+++ b/MobileApp/MobileApp/MobileApp/App.xaml
@@ -61,43 +61,44 @@
             </Style>
 
             <DataTemplate x:Key="ProductTemplate">
-                <Frame BorderColor="#D8DAE0" CornerRadius="20" HasShadow="True">
-                    <Grid Padding="10,10,10,0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="5"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                        <!-- scale image to fit the view (won't be cropped to fill view) -->
-                        <Image Grid.RowSpan="2"
-                       Source="{Binding ImageUrl}" 
-                       Aspect="AspectFit"
-                       HeightRequest="80"/>
-                        <Label Margin="10,10,0,0" Grid.Column="1"
-                       Text="{Binding Name}" 
-                       FontAttributes="Bold" 
-                           TextColor="Black"
-                           FontSize="20"/>
-                        <FlexLayout Margin="10,0,0,0" Grid.Column="1" Grid.Row="1">
-                            <Label Text="Price: £" TextColor="DarkGray" FontSize="20"/>
-                            <Label
-                       Text="{Binding Price}" 
-                       VerticalOptions="End" 
-                           TextColor="DarkGray"
-                           FontSize="20"
-                           HorizontalTextAlignment="End"/>
-                        </FlexLayout>
+                <Grid Padding="5">
+                    <Frame BorderColor="#D8DAE0" CornerRadius="20" HasShadow="True">
+                        <Grid Padding="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="5"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="100"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <!-- scale image to fit the view (won't be cropped to fill view) -->
+                            <Image Grid.RowSpan="2"
+                               Source="{Binding ImageUrl}" 
+                               Aspect="AspectFit"
+                               HeightRequest="80"/>
+                            <Label Margin="10,10,0,0" Grid.Column="1"
+                               Text="{Binding Name}" 
+                               FontAttributes="Bold" 
+                               TextColor="Black"
+                               FontSize="20"/>
+                            <FlexLayout Margin="10,0,0,0" Grid.Column="1" Grid.Row="1">
+                                <Label Text="Price: £" TextColor="DarkGray" FontSize="20"/>
+                                <Label Text="{Binding Price}" 
+                                   VerticalOptions="End" 
+                                   TextColor="DarkGray"
+                                   FontSize="20"
+                                   HorizontalTextAlignment="End"/>
+                            </FlexLayout>
 
-                        <!-- separator line -->
-                        <!--<BoxView Grid.Row="2" Grid.ColumnSpan="3" Margin="0" Color="{StaticResource GridLineColor}" Style="{StaticResource SeparatorLineStyle}"/>-->
+                            <!-- separator line -->
+                            <!--<BoxView Grid.Row="2" Grid.ColumnSpan="3" Margin="0" Color="{StaticResource GridLineColor}" Style="{StaticResource SeparatorLineStyle}"/>-->
+                        </Grid>
+                    </Frame>
+                </Grid>
 
-                    </Grid>
 
-                </Frame>
             </DataTemplate>
 
             <!--<DataTemplate x:Key="ProductSearchTemplate">
