--- a/MobileApp/MobileApp/MobileApp/Views/LoginPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/LoginPage.xaml
@@ -6,18 +6,18 @@
     <ContentPage.Content>
         <StackLayout Padding="10">
             <!--Padding="0 0 20 0"-->
-            <Label FontSize="40" HorizontalOptions="Center" Text="Login"/>
-            <Label Text="Email" FontSize="Large"/>
-            <Entry x:Name="usernameEntry" Text="{Binding username}" Placeholder="Email" FontSize="Large"/>
-            <Label Text="Password" FontSize="Large"/>
-            <Entry x:Name="passwordEntry" Text="{Binding password}" Placeholder="Password" FontSize="Large" IsPassword="True"/>
+            <Label FontSize="40" HorizontalOptions="Center" Text="Login" TextColor="Black"/>
+            <Label Text="Email" FontSize="Large" TextColor="Black"/>
+            <Entry x:Name="usernameEntry" Text="{Binding username}" Placeholder="Email" FontSize="Large" TextColor="Black"/>
+            <Label Text="Password" FontSize="Large" TextColor="Black"/>
+            <Entry x:Name="passwordEntry" Text="{Binding password}" Placeholder="Password" FontSize="Large" IsPassword="True" TextColor="Black"/>
             
             <!--<Button Text="Login" Command="{Binding SubmitCommand}"/>-->
             <Button Text="Login" x:Name="LoginBtn" Command="{Binding LoginCmd}"/>
             <!--<Label x:Name="messageLabel"/>-->
             <FlexLayout Wrap="Wrap" JustifyContent="SpaceAround">
-                <Button WidthRequest="185" Text="Register" Command="{Binding GoSignUpPage}"/>
-                <Button WidthRequest="185" Text="Reset Password" Command="{Binding GoResetPage}"/>
+                <Button WidthRequest="185" Text="Register" Command="{Binding GoSignUpPage}" FontSize="18"/>
+                <Button WidthRequest="185" Text="Reset Password" Command="{Binding GoResetPage}" FontSize="18"/>
             </FlexLayout>
         </StackLayout>
     </ContentPage.Content>
